# chess-visual-code

./: README.md  main.py  pyproject.toml
games/: algo_example.pgn  sample_0-index_moves.pgn  sample_tiny.pgn  short_sample.pgn  wcc_2023_game_18.pgn
src/: create.py  decode.py  draw.py  encode.py  utils.py
