[project]
name = "chess-visual-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "drawsvg>=2.4.1",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "pip>=26.0.1",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
